# gn-win-example

./: BUILD.gn  README.md  hello.cc  hello_shared.cc  hello_shared.h  hello_static.cc  hello_static.h
