executable("hello") {
    sources = ["hello.cc"]

    deps = [
      ":static_lib",
      ":shared_lib"
    ]
}

static_library("static_lib") {
    sources = [
        "hello_static.h",
        "hello_static.cc",
    ]
}

shared_library("shared_lib") {
    sources = [
        "hello_shared.h",
        "hello_shared.cc",
    ]

    defines = ["HELLO_SHARED_IMPLEMENTATION"]
}